tests/ui/const-generics/generic_const_exprs/cannot-convert-refree-ice-114463.stderr
error: cannot capture late-bound lifetime in constant
  --> $DIR/cannot-convert-refree-ice-114463.rs:6:16
   |
LL | fn bug<'a>() {
   |        -- lifetime defined here
LL |     [(); (|_: &'a u8| (), 0).1];
   |                ^^

error: aborting due to 1 previous error

